--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "single-spa-vue": "^1.10.1",
     "vue": "^2.6.14"
   },
   "devDependencies": {
